:heavy_minus_sign: 移除无效依赖